# whisper-cpu

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  batch_process.py  main.py  pyproject.toml  utils.py  whisper_lrc.py
blog/: blog.md
whisper_lrc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
